# ravex

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: 01_simulation_oneplanet.ipynb  02_simulation_twoplanets.ipynb  03_simulation_oneplanet_with_simulated_observations.ipynb  04_oneplanet_with_maroon-x_detectability_tracker.ipynb  05_oneplanet_with_maroon-x-detection_growth.ipynb  06_TOI7009_maroon-x-RED+BLUE.ipynb  07_synthetic_recovery.ipynb  08_GJ724_detectability_map.ipynb  09_GJ724_detectability_map_published_residuals.ipynb
examples/results_toi7009b/: toi7009b_precision_tracker_red_blue_conservative.csv
src/ravex/: __init__.py  core.py
